--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,4 +27,5 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     implementation 'com.android.support:design:28.0.0'
 
+    implementation 'com.intuit.sdp:sdp-android:1.0.6'
 }
