--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,12 +3,12 @@
     package="com.freelancer.buivanphuc.russianenglish">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
@@ -20,13 +20,22 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.GrammarActivity" />
-        <activity android:name=".activity.DetailKeyWordActivity" />
-        <activity android:name=".activity.CategoryActivity"/>
+        <activity
+            android:name=".activity.GrammarActivity"
+            android:screenOrientation="portrait" />
+
+        <activity
+            android:name=".activity.DetailKeyWordActivity"
+            android:screenOrientation="portrait" />
+
+        <activity
+            android:name=".activity.CategoryActivity"
+            android:screenOrientation="portrait" />
+
         <service
             android:name=".service.FloatingViewService"
             android:enabled="true"
-            android:exported="false"/>
+            android:exported="false" />
     </application>
 
 </manifest>
